fix: unify scrollbar colors in different browsers

--- a/src/css/Editor.scss
+++ b/src/css/Editor.scss
@@ -18,7 +18,8 @@
                 background-color: $scrollbar-thumb-active-color;
             }
         }
-        scrollbar-color: $scrollbar-track-color $scrollbar-thumb-color;
+
+        scrollbar-color: $scrollbar-thumb-color $scrollbar-track-color;
         scrollbar-width: thin;
     }
 
